<resources>
    <string name="app_name">WIN-COVID-19</string>
    <string name="title_home">Community</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_assessment">Self-Assessment</string>
    <string name="title_offers">Offers</string>
    <string name="title_requests">Requests</string>
    <string name="reminder_text_1">To reduce the chances of spreading the deadly corona virus:</string>
    <string name="reminder_text_2">✔Wash your hands every 1 or 2 hours</string>
    <string name="reminder_text_3">✔Avoid touching your face (eyes, nose, mouth)</string>
    <string name="reminder_text_4">✔Clean your house with disinfectant cleaners</string>
    <string name="reminder_text_5">✔Wash your clothes regularly</string>
    <string name="hand_wash_reminder">HAND WASH</string>
    <string name="avoid_touch">AVOID TOUCH</string>
    <string name="house_clean">HOUSE CLEAN</string>
    <string name="wash_hand_text">We will remind you to wash your hands:</string>
    <string name="avoid_touch_text">We will remind you not to touch your face:</string>
    <string name="house_clean_text">We will remind you to clean your house:</string>
    <string name="radio_every_1_hour">EVERY 1 HOUR</string>
    <string name="radio_every_editText">EVERY </string>
    <string name="radio_day_editText"> DAY at 9.00 AM</string>
    <string name="radio_colon_editText"> : </string>
    <string name="radio_every_2_hour">EVERY 2 HOURS</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="no_reminder_text">Currently you don\'t have any reminder</string>
    <string name="your_reminder_text">Your\'e current reminders:</string>
    <string name="post_offer">POST</string>
    <string name="TEXT_SHARE">LIST SOMETHING YOU WANT TO SHARE</string>
    <string name="TEXT_REQUEST">LIST SOMETHING YOU WANT TO REQUEST</string>
    <string name="assessment_intro">If you think you have coronavirus (COVID-19) symptoms or have been in close contact with someone who has it, use this self-assessment to help determine how to seek further care.</string>

    <string name="Q1">Are you experiencing any of the following symptoms? \n
    <li>severe difficulty breathing (struggling for each breath, speaking in single words)</li> \n
        <li>severe chest pain</li>\n
        <li>having a very hard time waking up</li>\n
        <li>feeling confused </li>\n
        <li>lost consciousness</li></string>

    <string name="Q2"> Are you experiencing any of the following symptoms (or a combination of these symptoms)?\n
        <li>fever</li>\n
        <li>new cough</li>\n
        <li>difficulty breathing (for example, struggling for each breath, cannot hold breath for more than 10 seconds)</li>
    </string>

    <string name="Q3"> Have you travelled outside of Canada in the last 14 days? </string>
    <string name="Q4"> Has someone you are in close contact with tested positive for COVID-19?  </string>
    <string name="Q5"> Are you in close contact with a person who either: \n
        <li>is sick with new respiratory symptoms? \n</li>
            or \n
        <li>recently travelled outside of Canada?</li> \n
        Respiratory symptoms can include fever, cough or difficulty breathing.
    </string>
    <string name="continue_btn"><u>Continue</u></string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="official_website">https://www.wrh.on.ca/COVID19AssessmentCentre"</string>
    <string name="result_maybe">
        Contact a doctor or Tele-health Ontario. You may be eligible for a COVID-19 test.\n
    </string>
    <string name="more_info">More information about your nearest Test center:</string>
    <string name="result_isolate">
        Stay at home as much as possible. \n
        You do not need to contact a doctor or Telehealth Ontario for an assessment. \n \n
        In case of your symptoms began, you must stay at home for 14 days after. \n
        In that case : \n
        <li>Stay at home for 14 days</li>\n
        <li>Tell people you’ve been in contact with</li>\n
        <li>Monitor your health</li>\n
    </string>
    <string name="call_911">Please call 911 or go directly to your nearest emergency department.
    </string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="existing_user_sign_in_here"><u>Existing User Sign-in here</u></string>
</resources>
