<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.imsadman.win_covid_19.ui.community.CommunityFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.imsadman.win_covid_19.ui.reminder.ReminderFragment"
        android:label="@string/title_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.imsadman.win_covid_19.ui.assessment.NotificationsFragment"
        android:label="@string/title_assessment"
        tools:layout="@layout/fragment_notifications" />
</navigation>